# c2rust-perf

./: .gitignore  Makefile  csv_benchmark.py  output.txt  project_description.doc  run_basic.sh  run_benchmarks.sh  run_pintools.sh  wrapper.py  wrapper_perf.py
bfs/: Cargo.toml  Makefile  bfs.c  bfs_c  bfs_perf.c  bfs_perf_c
bfs/src/: bfs.rs  bfs_perf.rs
binary_search/: .gitignore  Cargo.toml  Makefile  binary_search.c  binary_search_c  binary_search_perf.c  binary_search_perf_c  inscount.out
binary_search/src/: binary_search.rs  binary_search_perf.rs
dfs/: .gitignore  Cargo.toml  Makefile  dfs.c  dfs_c  dfs_perf.c  dfs_perf_c  inscount.out
dfs/binary_search/: Cargo.toml  objdump.txt
dfs/src/: dfs.rs  dfs_perf.rs
matrix_mult/: .gitignore  Cargo.toml  Makefile  inscount.out  matrix_mult.c
matrix_mult/src/: matrix_mult.rs
merge_sort/: .gitignore  Cargo.toml  Makefile  inscount.out  merge_sort.c
merge_sort/src/: merge_sort.rs
other_benchmarks/array_sum/: Cargo.toml  Makefile  array_sum  array_sum.c  array_sum_c.ll
other_benchmarks/bfs/: Cargo.toml  Makefile  bfs.c  bfs_c  bfs_perf.c
quicksort/: .gitignore  Cargo.toml  Makefile  inscount.out  quicksort.c  quicksort_c  quicksort_c.ll  quicksort_perf  quicksort_perf.c  quicksort_perf_c
quicksort/src/: quicksort.rs  quicksort_perf.rs
selection_sort/: .gitignore  Cargo.toml  Makefile  inscount.out  selection_c  selection_sort.c  selection_sort_c  selection_sort_perf.c  selection_sort_perf_c
selection_sort/src/: selection_sort.rs  selection_sort_perf.rs
threesum/: Cargo.toml
(+17 files in other folders)
