[package]
name = "quicksort"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quicksort"
path = "src/quicksort.rs"

#[[bin]]
#name = "quicksort_perf"
#path = "src/quicksort_perf.rs"

[dependencies]
# nix = { version = "0.29.0", features = ["signal", "process"] }
rand = "0.8" 
libc = "=0.2.126"
perf-event-open-sys = "=4.0.0"

[build]
rustflags = ["-C", "llvm-args=-disable-sroa"]
