[package]
name = "selection_sort_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "selection_sort"
path = "src/selection_sort.rs"

[[bin]]
name = "selection_sort_perf"
path = "src/selection_sort_perf.rs"

[dependencies]
nix = { version = "0.29.0", features = ["signal", "process"] }
rand = "0.8" 
